@@ -185,6 +185,22 @@ name|hadoop
 operator|.
 name|hive
 operator|.
+name|conf
+operator|.
+name|HiveConf
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hive
+operator|.
 name|ql
 operator|.
 name|metadata
@@ -442,6 +458,11 @@ index|[
 literal|2
 index|]
 decl_stmt|;
+name|boolean
+name|ignoreHdfsLoc
+init|=
+literal|false
+decl_stmt|;
 specifier|public
 name|HiveCompactIndexResult
 parameter_list|(
@@ -477,6 +498,21 @@ operator|=
 operator|new
 name|BytesRefWritable
 argument_list|()
+expr_stmt|;
+name|ignoreHdfsLoc
+operator|=
+name|HiveConf
+operator|.
+name|getBoolVar
+argument_list|(
+name|conf
+argument_list|,
+name|HiveConf
+operator|.
+name|ConfVars
+operator|.
+name|HIVE_INDEX_IGNORE_HDFS_LOC
+argument_list|)
 expr_stmt|;
 if|if
 condition|(
@@ -767,6 +803,31 @@ argument_list|,
 name|firstEnd
 argument_list|)
 decl_stmt|;
+if|if
+condition|(
+name|ignoreHdfsLoc
+condition|)
+block|{
+name|Path
+name|tmpPath
+init|=
+operator|new
+name|Path
+argument_list|(
+name|bucketFileName
+argument_list|)
+decl_stmt|;
+name|bucketFileName
+operator|=
+name|tmpPath
+operator|.
+name|toUri
+argument_list|()
+operator|.
+name|getPath
+argument_list|()
+expr_stmt|;
+block|}
 name|IBucket
 name|bucket
 init|=
