@@ -1405,6 +1405,59 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+return|return
+name|getPartitionDescFromPathRecursively
+argument_list|(
+name|pathToPartitionInfo
+argument_list|,
+name|dir
+argument_list|,
+name|cacheMap
+argument_list|,
+literal|false
+argument_list|)
+return|;
+block|}
+specifier|public
+specifier|static
+name|PartitionDesc
+name|getPartitionDescFromPathRecursively
+parameter_list|(
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|PartitionDesc
+argument_list|>
+name|pathToPartitionInfo
+parameter_list|,
+name|Path
+name|dir
+parameter_list|,
+name|Map
+argument_list|<
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|PartitionDesc
+argument_list|>
+argument_list|,
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|PartitionDesc
+argument_list|>
+argument_list|>
+name|cacheMap
+parameter_list|,
+name|boolean
+name|ignoreSchema
+parameter_list|)
+throws|throws
+name|IOException
+block|{
 name|PartitionDesc
 name|part
 init|=
@@ -1421,6 +1474,9 @@ name|part
 operator|==
 literal|null
 operator|&&
+operator|(
+name|ignoreSchema
+operator|||
 operator|(
 name|dir
 operator|.
@@ -1447,6 +1503,7 @@ name|equals
 argument_list|(
 literal|""
 argument_list|)
+operator|)
 operator|)
 condition|)
 block|{
@@ -1555,7 +1612,7 @@ operator|.
 name|toString
 argument_list|()
 operator|+
-literal|" in partToPartitionInfo: "
+literal|" in pathToPartitionInfo: "
 operator|+
 name|pathToPartitionInfo
 operator|.
